@startuml
hide empty members

class Piece<<abstract>>{
-color:Piece.Color
-type:Piece.Type
+getColor():Piece.Color
+getType():Piece.Type
}

class Pawn{

}

class Rook{

}

class Knight{

}

class Bishop{

}

class Queen{

}

class King{

}

+enum Color{
BLACK
WHITE
}

+enum Piece.Type{
PAWN
ROOK
KNIGHT
BISHOP
QUEEN
KING
}

Color "1" --o "*" Piece
Piece.Type --right+ Piece
Piece.Type "1" --o "*" Piece

Pawn -up-|> Piece
Rook -up-|> Piece
Knight -up-|> Piece
Bishop -up-|> Piece
Queen -up-|> Piece
King -up-|> Piece




@enduml